2016-09-10	ohai moar plz

		include/innocent-pear/ohai.h :
		- new

		include/innocent-pear/omg.h ,
		share/innocent-pear/doge-01.cc :
		- changed to use ohai.h

		GNUmakefile :
		- added ohai.h as a dependency and installable

2016-09-09	"Hummingbirds never remember the words to songs."

		share/innocent-pear/doge-01.cc :
		- added frobbing of /dev/tty
		- further reduced layers of operand scrambling

		share/innocent-pear/doge-03.cc :
		- added frobbing of /dev/tty

		include/innocent-pear/omg.h :
		- rearranged logic to hopefully give more weight to
		  (permitted) unsafe operations
		- added frobbing of /dev/tty

		include/innocent-pear/dawg.h :
		- redefined dawg_impl<...> to include a level count in its
		  template parameters
		- added check against infinite template recursion
		- added >> operator for dawg_impl<...> (and dawg<...>)

		include/innocent-pear/yodawg.h :
		- updated to fit new definition of dawg_impl<...>

		include/innocent-pear/rofl.h :
		- added open(...) and close(...) syscalls
		- some tweaks

		lolwutconf/ :
		- bumped to 1cb19518f3

2016-09-04	"It usually takes more than three weeks to prepare a good
		impromptu speech."

		GNUmakefile :
		- now dumps yet smaller portions of compiled test binaries

2016-09-03	Added tests for ARM hard-float target.

		.travis.yml :
		- added tests for armv7-a-linux-gnueabihf target

		infra/travis-install-deps.sh :
		- now handles ARM hard-float targets

		README.md :
		- updated

		lolwutconf/ :
		- bumped to 7000d5d792

2016-09-01	Let static relocations lie.

		bin/innocent-pear-c++.cc :
		- now only passes `-Wa,--Xinnocent-pear=dogecoin' (formerly
		  `-Wa,--Xinnocent-pear=doge') if building position-
		  -independent code

		bin/innocent-pear-dogecoin.cc :
		- now no longer frobs relocations in mergeable sections or
		  sorted sections

		share/innocent-pear/calm.cc :
		- `--Xinnocent-pear=doge' -> `--Xinnocent-pear=dogecoin'

		GNUmakefile :